--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,4 +1,4 @@
 <div class="note">
-    <div class="note-title">note 1</div>
-    <div class="note-desc">heres note 1 desc</div>
+    <div class="note-title">כותרת של פתק</div>
+    <div class="note-desc">כאן אפשר לכתוב טקסט</div>
 </div>
