--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* Application-wide Styles */
+/* Application-wide Styles
 h1 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
@@ -17,6 +17,6 @@ h1 {
     font-family: Cambria, Georgia;
   }
   /* everywhere else */
-  * {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+* {
+  font-family: 'Heebo', sans-serif;
+}
