added footer, navbar, and css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
-<h1>{{title}}</h1>
-<app-notes></app-notes>
-<br>
-<app-notes></app-notes>
-<br>
-<app-notes></app-notes>
+<div id="page">
+    <div id="pageNavbar">
+        <app-navbar></app-navbar>
+    </div>
+    <div id="pageNotes">
+        <app-notes></app-notes>
+        <app-notes></app-notes>
+        <app-notes></app-notes>
+        <app-notes></app-notes>
+        <app-notes></app-notes>
+        <app-notes></app-notes>
+        <app-notes></app-notes>
+        <app-notes></app-notes>
+    </div>
+    <div id="pageFooter">
+        <app-footer></app-footer>
+    </div>
+</div>
