--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -10,8 +10,11 @@
     font-weight: bold;
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
+    padding-right: 5px;
+    height: 25px;
 }
 
 .note-desc {
     background-color: white;
+    padding: 5px;
 }
