--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,12 +4,12 @@
     </div>
     <div id="userSession">
         <div id="userDetails">
-            <img id="avatar" src="/avatar.png">
+            <img id="avatar" src="assets/avatar.png">
             <div id="welcomeTitle">מחובר כ-</div>
             <div id="userName">עידן הדר</div>
         </div>
         <div id="logOut">
-            <img id="logOutIcon" src="/logout.png">
+            <img id="logOutIcon" src="assets/logout.png">
         </div>
     </div>
 </div>
