--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,14 @@
         <app-navbar></app-navbar>
     </div>
     <div id="pageNotes">
-        <app-notes></app-notes>
-        <app-notes></app-notes>
-        <app-notes></app-notes>
-        <app-notes></app-notes>
-        <app-notes></app-notes>
-        <app-notes></app-notes>
-        <app-notes></app-notes>
-        <app-notes></app-notes>
+        <h1 *ngFor="let note of notes">
+            {{note.title}}
+        </h1>
+        <app-notes *ngFor="let note of notes"></app-notes>
+        <div id="newNote" (click)="newNote()">
+            <svg id="my-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M24 10h-10v-10h-4v10h-10v4h10v10h4v-10h10z" /></svg>
+        </div>
     </div>
     <div id="pageFooter">
         <app-footer></app-footer>
