--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,6 +10,6 @@
     font-size: 17px;
     font-weight: 500;
     color: #ffffff;
-    margin: 20px;
+    margin: 0 20px;
     text-decoration: none;
 }
