--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,4 +1,5 @@
-<div class="note">
-    <div class="note-title">כותרת של פתק</div>
-    <div class="note-desc">כאן אפשר לכתוב טקסט</div>
+<div class="note" >
+    <input class="note-title" placeholder="sde}}">
+    <input class="note-desc" placeholder="s">
+    <!-- <div id="newNote" (click)="newNote()">sd</div> -->
 </div>
