--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -3,7 +3,8 @@
     height: 180px;
     border: 3px solid #ffbb00;
     border-radius: 20px;
-    
+    display: flex;
+    flex-direction: column;
 }
 
 .note-title {
@@ -17,6 +18,7 @@
 }
 
 .note-desc {
+    flex:1;
     background-color: white;
     padding: 5px;
     width: 210px;
@@ -32,4 +34,13 @@ textarea:focus, input:focus{
 
 ::placeholder {
     color: #000000;
+}
+
+#deleteIcon {
+    align-self: flex-end;
+    padding: 7px;
+}
+
+#deleteIcon:hover {
+    cursor: pointer;
 }
