added note service

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,6 +1,6 @@
 <div class="note">
-    <input class="note-title" placeholder="sde}}">
-    <input class="note-desc" placeholder="s">
+    <input class="note-title" placeholder="הזן כותרת" value="{{noteTitle}}" (change)="updateNote1()">
+    <textarea class="note-desc" placeholder="תוכן הפתק" [value]="noteContent"></textarea>
     <svg id="deleteIcon" x="0px" y="0px" width="17" height="17" viewBox="0 0 172 172" style=" fill:#000000;">
         <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter"
             stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
