--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -18,6 +18,7 @@
 }
 
 .note-desc {
+  border: none;
     flex:1;
     background-color: white;
     padding: 5px;
@@ -34,6 +35,7 @@ textarea:focus, input:focus{
 
 ::placeholder {
     color: #000000;
+    opacity: 0.4;
 }
 
 #deleteIcon {
